--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "cognomega-edge-monorepo",
   "private": true,
-
   "packageManager": "pnpm@10.17.1+sha512.17c560fca4867ae9473a3899ad84a88334914f379be46d455cbf92e5cf4b39d34985d452d2583baf19967fa76cb5c17bc9e245529d0b98745721aa7200ecaf7a",
   "engines": {
     "node": ">=20.0.0"
@@ -11,14 +10,17 @@
     "dev:frontend": "pnpm -C packages/frontend dev",
     "dev:builder": "pnpm -C packages/builder dev",
     "dev:api": "pnpm -C packages/api dev",
-
-    "lint": "eslint . --ext .ts,.tsx,.js,.jsx"
+    "lint": "eslint . --ext .ts,.tsx,.js,.jsx --max-warnings=100",
+    "lint:fix": "eslint . --ext .ts,.tsx,.js,.jsx --fix",
+    "lint:strict": "eslint . --ext .ts,.tsx,.js,.jsx --max-warnings=0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^8.45.0",
     "@typescript-eslint/parser": "^8.45.0",
-    "eslint": "^9.36.0"
+    "eslint": "^9.36.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "globals": "^16.4.0"
   },
   "type": "module"
-
 }
