--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,10 +8,10 @@
     ],
     "jsx": "react-jsx",
     "module": "ESNext",
-    "moduleResolution": "Bundler",
+    "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "strict": false,
+    "strict": true,
     "skipLibCheck": true,
     "noEmit": true,
     "types": [
@@ -19,8 +19,12 @@
     ],
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"],
-      "@packages/*": ["./packages/*"]
+      "@/*": [
+        "./src/*"
+      ],
+      "@packages/*": [
+        "./packages/*"
+      ]
     }
   },
   "include": [
